Bug 293628 - View>Show Only Canvas bugs and usability
Summary: View>Show Only Canvas bugs and usability
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 281539 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-02-08 12:30 UTC by David REVOY
Modified: 2012-05-11 10:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
a pdf containing 2 picture, before full screen / after full screen (155.00 KB, application/pdf)
2012-02-08 12:30 UTC, David REVOY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2012-02-08 12:30:43 UTC
Created attachment 68619 [details]
a pdf containing 2 picture, before full screen / after full screen

Version:           svn trunk (using KDE 4.7.4) 
OS:                Linux

Hi, 

"View>Show Only Canvas" is a nice feature, but here are my problem with it :

1. A default standard for Keyboard shortcut proposition is 'Tab' (Gimp,Photoshop,Mypaint,Painter ). Digital painters are used to it in my opinion.

2. If a user press it ("View>Show Only Canvas") on GUI to discover feature, he can't actually escape it ( no way to know after the default shortcut keyboard ). This has been reported on the forum also by 2 users who get this bad experiences to feel blocked.  To solve it , I suggest mapping as well a 'Esc' shortcut on the keyboard to escape it. I feel user will find it in case of problem.

3. If a user get a panel disposition involving docked panel ( as the Default GUI ) switching between FullScreen and GUI make random mess on the interface and don't restore correctly the panel visible before going to full-screen mode. This is annoying because it makes the switch to full screen really painfull.  Workaround is to save the workspace disposition using the last icon in the tool bar , and restore the workspace each time. 
I attached a PDF to this report with 2 screenshot : Before Fullscreen , after restoring from a fullscreen.

Reproducible: Always


Actual Results:  
 

Expected Results:
Comment 1 Halla Rempt 2012-02-11 12:36:57 UTC
Full ack...
Comment 2 Halla Rempt 2012-02-12 09:53:14 UTC
Git commit 4bdb63c24abd18d5ca2e6cd8ffb7deab35f694fb by Boudewijn Rempt.
Committed on 11/02/2012 at 13:34.
Pushed by rempt into branch 'master'.

Change default shortcut for show-canvas-only to Tab

Conforming to other systems like GIMP and Photoshop
Related: bug 252071, bug 281539

Still, we might have to disable this function for 2.4 if we cannot fix
293628.

M  +1    -1    krita/ui/kis_view2.cpp

http://commits.kde.org/calligra/4bdb63c24abd18d5ca2e6cd8ffb7deab35f694fb
Comment 3 Sven Langkamp 2012-02-13 15:59:21 UTC
Point 3 can be worked around with workspaces. Save workspace before switching to canvas only and then restore after leaving it.
Comment 4 Halla Rempt 2012-02-29 12:35:41 UTC
Git commit 909b4871a108523c4348b456bb76e5da8950614b by Boudewijn Rempt.
Committed on 29/02/2012 at 12:00.
Pushed by rempt into branch 'master'.

Disable canvas-only mode for 2.4

It messes up the layout currently
Related: bug 281539

REVERT after 2.4

M  +9    -8    krita/ui/dialogs/kis_dlg_preferences.cc
M  +2    -1    krita/ui/kis_view2.cpp

http://commits.kde.org/calligra/909b4871a108523c4348b456bb76e5da8950614b
Comment 5 Halla Rempt 2012-04-19 08:09:16 UTC
*** Bug 281539 has been marked as a duplicate of this bug. ***
Comment 6 Halla Rempt 2012-05-11 08:07:57 UTC
Git commit 8960cd8ed89ee60d96f6bf321646a7ab06430ffc by Boudewijn Rempt.
Committed on 11/05/2012 at 10:06.
Pushed by rempt into branch 'master'.

Make docker positions stable for canvas-only mode

Using Sven's suggestion, we now save the docker state before hiding
the dockers; on unhide, we restore the state. If we merely show the
dockers, Qt's layout system messes up the docker's size and position.

M  +8    -13   libs/main/KoMainWindow.cpp
M  +1    -1    libs/main/KoMainWindow.h

http://commits.kde.org/calligra/8960cd8ed89ee60d96f6bf321646a7ab06430ffc
Comment 7 Halla Rempt 2012-05-11 08:12:53 UTC
Git commit 7e99e224235626a9292d33f651a04f328483faaa by Boudewijn Rempt.
Committed on 11/05/2012 at 10:11.
Pushed by rempt into branch 'master'.

Explicitly show menubar and statusbar on window close

If people hide the menubar in one way or another and then close the
app and don't get it back on startup they will get confused and won't
know how to restore it.

Same for the statusbar.

M  +4    -0    libs/main/KoMainWindow.cpp

http://commits.kde.org/calligra/7e99e224235626a9292d33f651a04f328483faaa
Comment 8 Halla Rempt 2012-05-11 08:39:10 UTC
only thing left is warn the user about the shortcut they need to get back; we cannot easily use esc because of other uses of esc in calligra :-(
Comment 9 Halla Rempt 2012-05-11 10:02:05 UTC
Git commit ebf825fbe4c80ef58ea8e9da5fbdeb95aaac95f5 by Boudewijn Rempt.
Committed on 11/05/2012 at 11:57.
Pushed by rempt into branch 'master'.

Add a floating message class

This can be used to show a transient message that fades after some
time. It's used here to show the user the shortcut for getting out
of the full-screen mode.

M  +1    -0    krita/ui/CMakeLists.txt
M  +8    -0    krita/ui/kis_view2.cpp
A  +288  -0    krita/ui/widgets/kis_floating_message.cpp     [License: GPL (v2+) LGPL (v2+)]
A  +70   -0    krita/ui/widgets/kis_floating_message.h     [License: GPL (v2+)]

http://commits.kde.org/calligra/ebf825fbe4c80ef58ea8e9da5fbdeb95aaac95f5