Add a floating message class

This can be used to show a transient message that fades after some
time. It's used here to show the user the shortcut for getting out
of the full-screen mode.

BUG:293628